--- a/index.html
+++ b/index.html
@@ -4,32 +4,28 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CPRG assignment 2: Timeline</title>
-<link rel="styles" href="styles.css">
+<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
 <body>
-    <div id="container"
     <header>
-        <h1>Stories about Dogs I drew</h1>
+        <h1>Stories about the Dogs I drew</h1>
+        <div class="nav-button">
+            <button id="about">About T&D</button>
+            <button id="tori">04.18.24</button>
+            <button id="ponzu">07.06.26</button>
+            <button id="eddie">08.09.24</button>
+        </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#">Introduction</a></li>
-            <li><a href="#">04.18.24</a></li>
-            <li><a href="#">07.06.24</a></li>
-            <li><a href="#">08.09.24</a></li>
-        </ul>
-    </nav>
     <main>
-        <h2>About Tori and Dianne</h2>
-        <img src="logo.png">
-        <img src="printing.png">
-        <p>T&D is named after Dianne and her dog, Tori.
-            Dianne painted wild animals before and after she met tori, Dianne decided to paint pets for pet parents
-            to capture a special moment for both pet parents and our beloved furry frends.
-        </p>
+        <h2 id="h2">Welcome to T&D Studio!</h2>
+        <section class="content">
+        <img src="" id="img">
+        <figcaption id="figcaption">Read about our story and enjoy the portraits!</figcaption>
+        </section>
     </main>
 
-    <script src="dogs.js">
-	</script>
-    </div>>
+    <script src="dogs.js"></script>
+    </div>
 </body>
