--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <h1>Stories about the Dogs I drew</h1>
-        <div class="nav-button">
+        <section class="nav-button">
             <button id="about">About T&D</button>
             <button id="tori">04.18.24</button>
             <button id="ponzu">07.06.24</button>
             <button id="eddie">08.09.24</button>
-        </div>
+        </section>
     </header>
     <main>
         <h2 id="h2">Welcome to T&D Studio!</h2>
@@ -24,8 +24,6 @@
         <img src="" id="img">
         <figcaption id="figcaption">Read about our story and enjoy the portraits!</figcaption>
         </section>
-    </main>
-
+    </main>   
     <script src="dogs.js"></script>
-    </div>
 </body>
