--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <h1>Stories about the Dogs I drew</h1>
-        <section class="nav-button">
+        <nav class="nav-button">
             <button id="about">About T&D</button>
             <button id="tori">04.18.24</button>
             <button id="ponzu">07.06.24</button>
             <button id="eddie">08.09.24</button>
-        </section>
+        </nav>
     </header>
     <main>
         <h2 id="h2">Welcome to T&D Studio!</h2>
